--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
 
   <!-- CSP : connect-src autorise ton API Vercel -->
   <meta http-equiv="Content-Security-Policy"
-      content="
-      default-src 'self';
-      base-uri 'self';
-      object-src 'none';
-      frame-ancestors 'none';
-      script-src 'self' https://cdn.tailwindcss.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net 'unsafe-inline';
-      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com;
-      img-src 'self' data: https://fanuel045.github.io;
-      font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com;
-      connect-src 'self' https://fanuel045.vercel.app https://api.emailjs.com;
-      media-src 'self';
-      form-action 'self';
-      upgrade-insecure-requests;
-      block-all-mixed-content;">
+    content="
+    default-src 'self';
+    base-uri 'self';
+    object-src 'none';
+    frame-ancestors 'none';
+    script-src 'self' https://cdn.tailwindcss.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net 'unsafe-inline';
+    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com;
+    img-src 'self' data: https://fanuel045.github.io;
+    font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com;
+    connect-src 'self' https://fanuel045-api.vercel.app https://api.emailjs.com;
+    media-src 'self';
+    form-action 'self';
+    upgrade-insecure-requests;
+    block-all-mixed-content;">
   <meta http-equiv="X-Content-Type-Options" content="nosniff" />
   <meta name="referrer" content="strict-origin-when-cross-origin" />
   <meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), gyroscope=(), magnetometer=(), microphone=(), geolocation=(), usb=(), payment=()"/>
@@ -188,6 +188,8 @@
     </div>
   </div>
 
+  
+  <script src="assets/js/env.js"></script>
   <script src="assets/js/app.js?v=5"></script>
 </body>
 </html>
